--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="contact">Contact</a></li>
             </ul>
             <!-- <button id="theme-toggle">Toggle Theme</button> -->
-            <button><img id="theme-toggle" src="/assets/icons/lightbulb.png" alt="theme" height="30px"
+            <button><img id="theme-toggle" src="./assets/icons/lightbulb.png" alt="theme" height="30px"
                     width="30px"></button>
         </nav>
     </header>
@@ -30,23 +30,23 @@
         <!-- <h2>About Me</h2> -->
         <div class="video-background">
             <video autoplay loop muted playsinline>
-                <source src="assets/videos/bg2.mp4" type="video/mp4">
+                <source src=".assets/videos/bg2.mp4" type="video/mp4">
             </video>
         </div>        
         <div class="about-content">
-                <img src="/assets/img/profile.png" alt="Your Profile Picture" class="profile-pic">
+                <img src="./assets/img/profile.png" alt="Your Profile Picture" class="profile-pic">
                 <div class="social-media">
                     <a href="https://github.com/thedeba" target="_blank">
-                        <img src="/assets/icons/github.svg" alt="GitHub">
+                        <img src="./assets/icons/github.svg" alt="GitHub">
                     </a>
                     <a href="https://linkedin.com/in/imdebashishroy" target="_blank">
-                        <img src="/assets/icons/linkedin.svg" alt="LinkedIn">
+                        <img src="./assets/icons/linkedin.svg" alt="LinkedIn">
                     </a>
                     <a href="https://x.com/imdebashishroy" target="_blank">
-                        <img src="/assets/icons/x.svg" alt="X">
+                        <img src="./assets/icons/x.svg" alt="X">
                     </a>
                     <a href="https://facebook.com/imdebashishroy" target="_blank">
-                        <img src="/assets/icons/facebook.svg" alt="facebook">
+                        <img src="./assets/icons/facebook.svg" alt="facebook">
                     </a>
                 </div>
             <div class="about-text">
@@ -138,47 +138,47 @@
         <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
-                <img src="/assets/icons/python.png" alt="python icon" width="40">
+                <img src="./assets/icons/python.png" alt="python icon" width="40">
                 <p>Python</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/java.png" alt="java icon" width="40">
+                <img src="./assets/icons/java.png" alt="java icon" width="40">
                 <p>Java</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/c.png" alt="c icon" width="40" style="filter: invert();">
+                <img src="./assets/icons/c.png" alt="c icon" width="40" style="filter: invert();">
                 <p>C</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/cpp.png" alt="cpp icon" width="40" style="filter: invert();">
+                <img src="./assets/icons/cpp.png" alt="cpp icon" width="40" style="filter: invert();">
                 <p>C++</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/dart.svg" alt="dart icon" width="40" style="filter: invert();">
+                <img src="./assets/icons/dart.svg" alt="dart icon" width="40" style="filter: invert();">
                 <p>Dart</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/flutter.svg" alt="flutter icon" width="40">
+                <img src="./assets/icons/flutter.svg" alt="flutter icon" width="40">
                 <p>Flutter</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/mysql.png" alt="mysql icon" width="40" style="filter: invert();">
+                <img src="./assets/icons/mysql.png" alt="mysql icon" width="40" style="filter: invert();">
                 <p>MySQL</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/html.png" alt="HTML Icon" width="40" />
+                <img src="./assets/icons/html.png" alt="HTML Icon" width="40" />
                 <p>HTML</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/css.png" alt="CSS Icon" width="40" />
+                <img src="./assets/icons/css.png" alt="CSS Icon" width="40" />
                 <p>CSS</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/js.png" alt="JavaScript Icon" width="40" />
+                <img src="./assets/icons/js.png" alt="JavaScript Icon" width="40" />
                 <p>JavaScript</p>
             </div>
             <div class="skill-card">
-                <img src="/assets/icons/asm.png" alt="asm icon" width="40" style="filter: invert();">
+                <img src="./assets/icons/asm.png" alt="asm icon" width="40" style="filter: invert();">
                 <p>ASM</p>
             </div>
         </div>
@@ -272,16 +272,16 @@
         <div class="contact-container">
             <div class="contact-info">
                 <div class="contact-item">
-                    <img src="/assets/icons/email.png" alt="Email Icon" width="30">
+                    <img src="./assets/icons/email.png" alt="Email Icon" width="30">
 
                     <p>Email: <a href="mailto:example@email.com">thedeba@icloud.com</a></p>
                 </div>
                 <div class="contact-item">
-                    <img src="/assets/icons/phone.png" alt="Phone Icon" width="30">
+                    <img src="./assets/icons/phone.png" alt="Phone Icon" width="30">
                     <p>Phone: <a href="tel:+8809697440304">+8809697440304</a></p>
                 </div>
                 <div class="contact-item">
-                    <img src="/assets/icons/location.png" alt="Location Icon" width="30">
+                    <img src="./assets/icons/location.png" alt="Location Icon" width="30">
                     <p>Location: Dhaka, Bangladesh</p>
                 </div>
             </div>
